--- a/ecommerce/css/style.css
+++ b/ecommerce/css/style.css
@@ -691,7 +691,7 @@ Add/Modify these styles in your existing CSS:
 
             .hamburger {
                 display: flex;
-                order: 3;
+                /* order: 3; */
             }
 
             .logo {
